# push-to-prod

./: .env.example  .gitignore  Dockerfile  LICENSE  PRIVACY.md  README.md  cloudbuild.yaml  cloudbuild.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
blast-radius-app/: .dockerignore  Dockerfile  pyproject.toml
blast-radius-app/src/: main.py
blast-radius-app/src/blast_radius/: calculate.py
blast-radius-app/src/blast_radius/data_models/: calculation.py  jira.py
client/: Dockerfile  README.md  middleware.ts  package-lock.json  package.json  tsconfig.json
client/app/: layout.tsx  page.tsx
client/app/settings/: page.tsx
client/components/: cta.tsx  faq.tsx  feature-flags-form.tsx  feature-section.tsx  footer.tsx  hero-section.tsx  login-form.tsx  navbar.tsx  pricing.tsx  prompt-templates-form.tsx  prompt-templates-preview.tsx  settings-layout.tsx  settings-nav.tsx  theme-provider.tsx
client/lib/: auth.ts  firebase.ts
client/pushtoprod/: middleware.ts  next.config.ts  package-lock.json  package.json
client/pushtoprod/app/: layout.tsx  page.tsx
client/pushtoprod/components/: cta.tsx  faq.tsx  feature-section.tsx  footer.tsx  hero-section.tsx  jira-integration-form.tsx  login-form.tsx  logo-cloud.tsx  navbar.tsx  pricing.tsx  user-auth-button.tsx
client/pushtoprod/lib/: firebase.ts
client/pushtoprod/types/: next-auth.d.ts
frontend-app/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend-app/src/: middleware.ts
frontend-app/src/app/: globals.css  layout.tsx  page.tsx
frontend-app/src/components/: AuthProvider.tsx  Header.tsx  SettingsForm.tsx
frontend-app/src/lib/: api-handlers.ts  auth-options.ts  firebase.ts  session.ts
frontend-app/src/utils/: auth.ts
github-app/: .env.example  Dockerfile  package-lock.json  package.json
github-app/src/: index.ts  server.ts
github-app/src/config/: index.ts
github-app/src/db/: index.ts
github-app/src/services/: blast-radius.ts  database.ts  ticket.ts
github-app/src/templates/: index.ts
github-app/src/types/: index.ts
github-app/src/utils/: logger.ts
push-to-prod/: README.md  app.yml  package-lock.json  package.json
push-to-prod/src/: index.ts
server/blast-radius/: Dockerfile  README.md  pyproject.toml
server/blast-radius/src/: calculate.py  database.py  main.py
server/blast-radius/src/data_models/: calculation.py  jira.py
server/github/: Dockerfile  README.md  package-lock.json  vitest.config.ts
server/github/lib/: config-page.d.ts  config-page.js  config-page.js.map  example.d.ts  example.js  example.js.map  index.d.ts  index.js  index.js.map  middleware.d.ts  middleware.js  middleware.js.map  server.js  server.js.map  tsconfig.tsbuildinfo  types.d.ts
server/github/scripts/: init-default-feature-flags.ts  init-default-templates.ts
server/syntropy/: Dockerfile  eda.py
src/: index.ts  server.ts
src/blast_radius/: calculate.py
src/components/: AuthProvider.tsx
syntropy-app/: README.md  eda-notebook.ipynb  pyproject.toml
syntropy-app/src/: main.py
syntropy-app/src/components/: code_summarizer.py  requirements_summarizer.py  synthesizer.py
syntropy-app/tests/: test_compare_summarizer.py
(+55 files in other folders)
