[project]
name = "blast-radius-app"
version = "0.1.0"
description = "Microservice for the Blast Radius application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "huggingface-hub>=0.28.1",
    "numpy==1.23.5",
    "pydantic-core>=2.27.2",
    "requests>=2.32.3",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "sentence-transformers==3.4.1",
    "torch==2.2.2",
    "transformers==4.48.2",
    "uvicorn>=0.34.0",
]
