[project]
name = "blast-radius-app"
version = "0.1.0"
description = "Microservice for the Blast Radius application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "fastapi[standard]>=0.115.6,<0.116.0",
    "filelock==3.17.0",
    "fsspec==2025.2.0",
    "huggingface-hub==0.28.1",
    "idna==3.10",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.23.5",
    "packaging==24.2",
    "pillow==11.1.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "sentence-transformers==3.4.1",
    "sympy==1.13.3",
    "threadpoolctl==3.5.0",
    "tokenizers==0.21.0",
    "torch==2.2.2",
    "tqdm==4.67.1",
    "transformers==4.48.2",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.20.0",
]
