[tool.poetry]
name = "blast-radius"
version = "0.1.0"
description = "Microservice for the Blast Radius application."
authors = ["Rodrigo Cochrane <rodrigo.cochrane@berkeley.edu>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = {extras = ["standard"], version = ">=0.115.6,<0.116.0"}
numpy = ">=1.26.0"
torch = ">=2.1.0"
sentence-transformers = "3.4.1"
uvicorn = "0.20.0"
firebase-admin = "^6.7.0"
